--- a/app/views/head/_head.erb
+++ b/app/views/head/_head.erb
@@ -1,6 +1,16 @@
 <%= javascript_include_tag "tinycon", :plugin => 'new_tasks' %>
 <% if User.current.logged? %>
 <script type="text/javascript" >
+	
+	<%if Setting.plugin_new_tasks["interval_ft"].to_i > 10
+	     t = Setting.plugin_new_tasks["interval_ft"].to_i * 1000 
+	else
+             t = 10000
+	end%>
+
+	
+
+
 
  Tinycon.setOptions({
      width: 7,
@@ -11,31 +21,35 @@
      fallback: true
 
   });
+
+show_task(); 
+
+
 function getRandomArbitary(min, max){
 	 return Math.random() * (max - min) + min;
 }
 
 $(function(){
-	setInterval(function(){
-		$('#ajax-indicator').unbind('ajaxSend')
-		$('#ajax-indicator').unbind('ajaxStop')
-		$.ajax({
-		  type: "GET",
-		  url:  "/tj?rnd=" + getRandomArbitary(10000, 9999999),
-		  dataType: "json",
-		  success: function(msg){
-		     if (msg.length > 0){
-		       Tinycon.setBubble(msg.length);
-		     }else{
-		       Tinycon.setBubble("");
-		     }
+	setInterval(function(){ show_task(); }, <%= t%>);
 
-		     setupAjaxIndicator();
-		  },
-	        });
-	
-	}, 2000)
 });
 
+function show_task(){
+	$('#ajax-indicator').unbind('ajaxSend')
+	$('#ajax-indicator').unbind('ajaxStop')
+	$.ajax({
+	  type: "GET",
+	  url:  "/tj?rnd=" + getRandomArbitary(10000, 9999999),
+	  dataType: "json",
+	  success: function(msg){
+	     if (msg.length > 0){
+	       Tinycon.setBubble(msg.length);
+	     }else{
+	       Tinycon.setBubble("");
+	     }
+	     setupAjaxIndicator();
+	  },
+        });
+}
 </script>
 <% end %>
